--- a/UI/react-app/package.json
+++ b/UI/react-app/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "rxjs-react": "^0.2.0",
